--- a/css/style.css
+++ b/css/style.css
@@ -734,7 +734,7 @@ b.plus-on {
 	resize:none;
 	height:60px;		
 }
-.account-top input[type="submit"],.register-top input[type="submit"]{
+.account-top input[type="button"],.register-top input[type="button"]{
 	outline:none;
 	padding:7px 20px;
 	color:#FFF;
